smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/traits-on-apply.smithy
// Syntax error at line 5, column 1: Unknown shape type: apply | Model
namespace com.foo

@deprecated
apply Foo @deprecated
